--- a/MiniLord/MiniLord/MiniLord.vcxproj
+++ b/MiniLord/MiniLord/MiniLord.vcxproj
@@ -168,9 +168,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseComponent.cpp" />
+    <ClCompile Include="ButtonComponent.cpp" />
+    <ClCompile Include="Command.cpp" />
     <ClCompile Include="EngineMenu.cpp" />
     <ClCompile Include="Font.cpp" />
+    <ClCompile Include="FPSRenderComponent.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MiniEngine.cpp" />
     <ClCompile Include="ObjectConstructor.cpp" />
@@ -180,17 +184,23 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ScoreComponent.cpp" />
+    <ClCompile Include="SquareComponent.cpp" />
     <ClCompile Include="TextComponent.cpp" />
     <ClCompile Include="Texture2D.cpp" />
     <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="XBoxController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AllComponents.h" />
     <ClInclude Include="BaseComponent.h" />
+    <ClInclude Include="ButtonComponent.h" />
+    <ClInclude Include="Command.h" />
     <ClInclude Include="EngineMenu.h" />
     <ClInclude Include="Font.h" />
+    <ClInclude Include="FPSRenderComponent.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="MiniEngine.h" />
     <ClInclude Include="MiniLordPCH.h" />
     <ClInclude Include="ObjectConstructor.h" />
@@ -202,10 +212,12 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ScoreComponent.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="SquareComponent.h" />
     <ClInclude Include="TextComponent.h" />
     <ClInclude Include="Texture2D.h" />
     <ClInclude Include="TimeManager.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="XBoxController.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="BjornsDiary.txt" />
