--- a/MiniLord/MiniLord/MiniLord.vcxproj
+++ b/MiniLord/MiniLord/MiniLord.vcxproj
@@ -227,26 +227,27 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ActorComponent.cpp" />
     <ClCompile Include="BaseComponent.cpp" />
     <ClCompile Include="ButtonComponent.cpp" />
     <ClCompile Include="CacheTest1.cpp" />
     <ClCompile Include="CacheTest2.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="DemoImguiComponent.cpp" />
-    <ClCompile Include="EngineMenu.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="FPSRenderComponent.cpp" />
     <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="ImGuiScene.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MiniEngine.cpp" />
     <ClCompile Include="ObjectConstructor.cpp" />
+    <ClCompile Include="PlayerComponent.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="RotateGameObject.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="SceneFactory.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="ScoreComponent.cpp" />
     <ClCompile Include="SquareComponent.cpp" />
@@ -266,6 +267,7 @@
     <ClInclude Include="..\3rdParty\imgui-1.87\imstb_rectpack.h" />
     <ClInclude Include="..\3rdParty\imgui-1.87\imstb_textedit.h" />
     <ClInclude Include="..\3rdParty\imgui-1.87\imstb_truetype.h" />
+    <ClInclude Include="ActorComponent.h" />
     <ClInclude Include="AllComponents.h" />
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="ButtonComponent.h" />
@@ -273,21 +275,21 @@
     <ClInclude Include="CacheTest2.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="DemoImguiComponent.h" />
-    <ClInclude Include="EngineMenu.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="FPSRenderComponent.h" />
     <ClInclude Include="GameObject.h" />
-    <ClInclude Include="ImGuiScene.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="MiniEngine.h" />
     <ClInclude Include="MiniLordPCH.h" />
     <ClInclude Include="ObjectConstructor.h" />
+    <ClInclude Include="PlayerComponent.h" />
     <ClInclude Include="RenderComponent.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="RotateGameObject.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="SceneFactory.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="ScoreComponent.h" />
     <ClInclude Include="Singleton.h" />
