--- a/MiniLord/TheCursedArcade/TheCursedArcade.vcxproj
+++ b/MiniLord/TheCursedArcade/TheCursedArcade.vcxproj
@@ -180,6 +180,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BagLogic.cpp" />
+    <ClCompile Include="BagState.cpp" />
     <ClCompile Include="CellLogic.cpp" />
     <ClCompile Include="CursedEngine.cpp" />
     <ClCompile Include="DiggerManager.cpp" />
@@ -190,9 +191,11 @@
     <ClCompile Include="ObjectConstructorCursedArc.cpp" />
     <ClCompile Include="PlayerDiggerLogic.cpp" />
     <ClCompile Include="SceneFactoryCursedArc.cpp" />
+    <ClCompile Include="States.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BagLogic.h" />
+    <ClInclude Include="BagState.h" />
     <ClInclude Include="CellLogic.h" />
     <ClInclude Include="CursedArcadePCH.h" />
     <ClInclude Include="CursedCommands.h" />
@@ -205,6 +208,7 @@
     <ClInclude Include="PlayerDiggerLogic.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="SceneFactoryCursedArc.h" />
+    <ClInclude Include="States.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
